# ImageToolBox

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile.in  README.md  README_EN.md  config.h.in
.github/workflows/: ci.yml  code_style.yml  macos.yml  ubuntu.yml  windows.yml
examples/: CMakeLists.txt  README.md
examples/demo/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  logo.rc  main.cpp  res.qrc
include/toolbox/: ImageDisplayArea  ImageView
include/toolbox/internal/: Compiler.hpp  Export.hpp  ImageDisplayArea.h  ImageDisplayArea.hpp  ImageView.h  ImageView.hpp  OperatingSystem.hpp
libs/: README.md
src/: BasicImageScene.cpp  BasicImageScene.h  BasicImageScene.hpp  ImageDisplayArea.cpp  ImageItem.cpp  ImageItem.h  ImageItem.hpp  ImageView.cpp  ShapePainter.cpp  ShapePainter.h  ShapePainter.hpp  main.cpp  res.qrc
src/shapes/: CrossLine.cpp  CrossLine.h  CrossLine.hpp
tests/: README.md
